appy styles en modalCard

--- a/pageModalCard.html
+++ b/pageModalCard.html
@@ -17,9 +17,11 @@
 
     <!-- Proyectos -->
     <section class="proyectos" id="proyectos">
+        <h2>Modal foto con card </h2>
         <div class="contenedor">
+            
             <div class="titulo-seccion">
-                <h2>Modal foto con card </h2>
+                
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit dolore repellendus sint autem,
                     asperiores
                     explicabo eum eligendi veritatis, vero ipsam natus porro harum cupiditate voluptate. Dolore repellat
@@ -35,7 +37,8 @@
             <div class="galeria-proyectos">
                 <div class="proyecto">
                     <img src="img/fotoUnica.jpg" alt="Proyecto" class="imagen-proyecto"
-                        data-titulo="Título del Proyecto" data-descripcion="Descripción del Proyecto"
+                        data-titulo="Título del Proyecto" data-descripcion=" Deleniti alias id porro ipsam ad pariatur.
+                        Repudiandquas sit dignissimos harum animi quidem deserunt"
                         alt="Descripción de la imagen">
                 </div>
             </div>
