aplicacion estilos modal card

--- a/pageModalCard.html
+++ b/pageModalCard.html
@@ -12,24 +12,14 @@
 </head>
 
 <body>
-
-
-
     <!-- Proyectos -->
     <section class="proyectos" id="proyectos">
         <h2>Modal foto con card </h2>
         <div class="contenedor">
-            
             <div class="titulo-seccion">
-                
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit dolore repellendus sint autem,
                     asperiores
-                    explicabo eum eligendi veritatis, vero ipsam natus porro harum cupiditate voluptate. Dolore repellat
-                    iste
-                    dolor fugiat?
-                    Sed quod, fuga sequi maiores laborum voluptates eligendi deserunt. Sint quaerat maxime sed fuga.
-                    Iusto ea
-                    possimus aut rerum voluptatibus modi repellat cupiditate? Deleniti alias id porro ipsam ad pariatur.
+                    explicabo eum eligendi vleniti alias id porro ipsam ad pariatur.
                     Repudiandquas sit dignissimos harum animi quidem deserunt error nisi recusandae quam illum excepturi
                     rerum?
                     Voluptatum quaerat odit accusantium animi id.</p>
@@ -38,18 +28,19 @@
                 <div class="proyecto">
                     <img src="img/fotoUnica.jpg" alt="Proyecto" class="imagen-proyecto"
                         data-titulo="Título del Proyecto" data-descripcion=" Deleniti alias id porro ipsam ad pariatur.
-                        Repudiandquas sit dignissimos harum animi quidem deserunt"
-                        alt="Descripción de la imagen">
+                        Repudiandquas sit dignissimos harum animi quidem deserunt orro ipsam ad pariatur.
+                        Repudiandquas sieritatis, vero ipsam natus porro harum cupiditate voluptate. Dolore repellat
+                        isterepellat cupiditate?">
                 </div>
             </div>
         </div>
     </section>
 
-    <div>
+    <div class="linkPages">
         <a href="./pageVideo.html">Video Modal</a>
         <a href="./index.html">Foto únicaModal</a>
     </div>
-    <section id="contenedor-modal">
+    <section class="contenedor-modal" id="contenedor-modal">
 
     </section>
 
