--- a/pageVideo.html
+++ b/pageVideo.html
@@ -35,8 +35,7 @@
             <div class="galeria-proyectos">
                 <div class="proyecto">
                     <img src="img/fotoUnica.jpg" alt="Proyecto" class="imagen-proyecto"
-                        data-titulo="Título del Proyecto" data-descripcion="Descripción del Proyecto"
-                        alt="Descripción de la imagen">
+                        data-video-src="./video/vientoSCBA.mp4"alt="Descripción de la imagen">
                 </div>
             </div>
         </div>
